# poetry-demo-calc

./: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml
poetry_demo_calc/: CHANGELOG.md  calculator.py
tests/: test_calculator.py
