[tool.poetry]
name = "poetry-demo-calc"
version = "0.1.0"
description = ""
authors = ["Valentins Fedotovs <39173395+vfedotovs@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
